# bevy_barcamp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
bevy_presentation/: slide01_overview.md  slide02_ecs.md  slide03_systems.md  slide04_events.md  slide05_resources.md  slide05_states.md  slide07_plugins.md  slide08_rust.md
docs/: architecture.mmd  commands.md  events.md  mcp_control_guide.md  test_architecture.mmd
macros/src/: lib.rs
plan/: jump_plan.md  mcp_integration_plan.md
spec/: architecture.mmd  game_state_transition.mmd  spec.md
spec/test/: test_architecture.mmd  test_event_sequence.mmd  test_spec.md
src/: game.rs  lib.rs  main.rs
src/game/: camera.rs  events.rs  game_controller.rs  interaction.rs  mob.rs  mod.rs  player.rs  resources.rs  state.rs  terrain.rs
src/game/includes/: events.rs  mod.rs  resources.rs
src/mcp/: actions.rs  mod.rs
test_step_macros/: Cargo.toml
test_step_macros/src/: lib.rs
