[package]
name = "bevy_barcamp"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = ["multi_threaded", "bevy_remote"] }
bevy_brp_extras = { git = "https://github.com/natepiano/bevy_brp", package = "bevy_brp_extras" }
derive-getters = "0.5.0"
macros = { path = "macros" }
avian2d = "0.4.0"
